fix: made smite stronger made AttackLoggable more clear